--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -88,14 +88,14 @@
             <!-- inicio políticas de calidad -->
             <section class="quality">
                 <h2>Descripción general de la política</h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis in ipsam explicabo ipsa natus
-                    fugiat asperiores, laborum architecto tenetur autem illo reprehenderit debitis, vel at cupiditate
-                    nostrum. accusamus cumque aspernatur! libero reiciendis debitis magni commodi itaque magnam nostrum.
-                    Numquam eum accusantium expedita. Eos inventore molestiae amet voluptatibus perferendis.
-                </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsam, impedit quisquam eveniet
-                    temporibus iure voluptatibus aperiam quod quidem? Temporibus, distinctio. Quod at corrupti odio
-                    vel, voluptatibus natus harum quidem?
+                <p>
+                    Toda nuestra política de calidad se sustenta en las definiciones centrales del estudio, las que
+                    proponen para nuestros servicios profesionales el nivel de excelencia más alto posible. Agregamos el
+                    mayor valor para nuestros clientes, en el marco de un vínculo de proximidad humana, de confianza y
+                    calidez, en un estilo sobrio, cuidando los resultados y objetivos del estudio. Asimismo,contribuimos al
+                    desarrollo constante de nuestra gente generando un ambiente de trabajo que promueveuna buena calidad de vida
+                    y un espacio de crecimiento, que a su vez sea seguro y saludable. Volcamos todas nuestras capacidades
+                    y solvencia profesional en ser promotores de cambio de la sociedad y del país.
                 </p>
             </section>
         </main>
