--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -65,35 +65,27 @@
             <!-- inicio quienes somos -->
             <section class="who-we-are">
                 <p>
-                    <strong>Lorem ipsum dolor totam magnam, id sapiente eligendi, explicabo corrupti consequatur amet ad
-                        laborum quia quasi ut
-                        nesciunt! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <strong>
+                        Nuestros profesionales brindan asesoramiento legal, contable, notarial y tributario, en
+                        cuestiones comerciales complejas a través de una óptica multidisciplinaria. Esto implica
+                        trabajar en equipo para dar soluciones acordes a los desafíos que presentan los negocios
+                        actuales.
                     </strong>
                 </p>
-                <p>Fugit iste, quibusdam, numquam quos dolorum assumenda tempora deleniti excepturi
-                    praesentium.
-                </p>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sunt error minima quos
-                    perspiciatis
-                    illo earum voluptatem aliquam, maxime enim doloremque sed vero ullam assumenda atque libero
-                    deserunt.
-                    Illum, ducimus.
+                <p>
+                    La totalidad de nuestra reputación y posición de liderazgo se basan en la cultura y en la
+                    filosofía que noshan sostenido a lo largo de los años y bajo las que trabajamos, teniendo
+                    como pilares la excelencia, la ética y el profesionalismo.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam impedit rerum laborum nulla,
-                    possimus voluptatibus ipsum facere culpa iusto aliquam debitis temporibus sed aut hic ipsa vel, cum
-                    est nobis?
+                    Somos sinceros y honestos entre nosotros, con nuestros clientes y con todos aquellos con quienes
+                    interactuamos. Somos íntegros en lo que hacemos y en lo que decimos. La palabra integridad no admite
+                    para nosotros dos interpretaciones, ya que consideramos que los valores no admiten grado. Y esto se
+                    demuestra en nuestras acciones. Creemos que honestidad e integridad son la esencia del éxito.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sunt doloribus, accusantium porro
-                    tenetur molestiae corrupti reiciendis eos atque provident quaerat illum ullam distinctio,
-                    consectetur excepturi qui iusto voluptatem error?
-                </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eos veritatis minima voluptate,
-                    ratione minus reprehenderit ab quae pariatur quam earum cum excepturi nam magni error dolorem
-                    perspiciatis atque nulla! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, eum minus
-                    modi sit, distinctio molestiae cupiditate recusandae animi vitae fugit in asperiores! Asperiores
-                    laboriosam et officiis earum soluta ipsum quasi.
+                    Respetamos y demostramos respeto a los demás. Valoramos los aportes de todos los integrantes de
+                    nuestro equipo y respetamos a cada uno como ser individual y único.
                 </p>
             </section>
             <!-- inicio recomendaciones -->
@@ -101,10 +93,10 @@
                 <div id="carouselExampleCaptions" class="carousel slide carrusel--height" data-bs-ride="false">
                     <div class="carousel-indicators d-none d-md-flex ">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            class="active button--orange" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="button--orange"
                             aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" class="button--orange"
                             aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner carrusel--height">
