--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -64,21 +64,16 @@
         <main id="main">
             <!-- inicio seccion trabaja con nosotros -->
             <section class="work-with-us">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium dolor quos aliquam eius maiores
-                    vel
-                    voluptates ad delectus rem est aliquid numquam, non provident ea magnam iste sapiente libero. Nemo?
+                <p>
+                    Brindamos oportunidades únicas de capacitación y una poderosa plataforma para el desarrollo personal
+                    y profesional. En nuestro Estudio participarás en trabajos de altísima calidad, en temas
+                    interesantes y complejos de clientes de reconocida trayectoria.
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, esse velit quisquam excepturi
-                    dignissimos laborum, architecto non odio amet dolor minima aspernatur commodi possimus explicabo
-                    dolorem
-                    nam nemo quis id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perspiciatis
-                    nemo consectetur? Reprehenderit corporis praesentium sint incidunt cupiditate eveniet perferendis.
-                    Beatae numquam qui aspernatur non blanditiis, exercitationem accusamus ipsa est?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum modi asperiores nam sunt blanditiis
-                    rerum
-                    debitis saepe, doloremque provident molestiae accusamus suscipit porro itaque adipisci
-                    exercitationem!
-                    Earum quod laboriosam dolor.</p>
+                <p>
+                    Valoramos y promovemos la asistencia a seminarios y conferencias, así como a posgrados y
+                    capacitación en universidades de Derecho en estudios jurídicos extranjeros reconocidos, para que
+                    puedas desarrollar tu propia especialidad.
+                </p>
             </section>
             <!-- inicio seccion formulario -->
             <section class="form">
