--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -109,18 +109,26 @@
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
                     <ul>
-                        <a href="https://www.facebook.com/people/Brascesco-Larrosa/100084765421718" target="_blank">
-                            <li><img src="./img/facebook.png" alt="logo de facebook"></li>
-                        </a>
-                        <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
-                            <li><img src="./img/instagram.png" alt="logo de instragram"></li>
-                        </a>
-                        <a href="#" target="_blank">
-                            <li><img src="./img/twitter.png" alt="logo de twitter"></li>
-                        </a>
-                        <a href="#" target="_blank">
-                            <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
-                        </a>
+                        <li>
+                            <a href="https://www.facebook.com/people/Brascesco-Larrosa/100084765421718" target="_blank">
+                                <img src="./img/facebook.png" alt="logo de facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
+                                <img src="./img/instagram.png" alt="logo de instragram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="./img/twitter.png" alt="logo de twitter">
+                            </a>
+                        </li>   
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="./img/whatsapp.png" alt="logo de whatsapp">
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="locations">
