--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
+    <meta name="description"
+        content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -172,18 +174,26 @@
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
                     <ul>
-                        <a href="https://www.facebook.com/people/Brascesco-Larrosa/100084765421718" target="_blank">
-                            <li><img src="./img/facebook.png" alt="logo de facebook"></li>
-                        </a>
-                        <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
-                            <li><img src="./img/instagram.png" alt="logo de instragram"></li>
-                        </a>
-                        <a href="#" target="_blank">
-                            <li><img src="./img/twitter.png" alt="logo de twitter"></li>
-                        </a>
-                        <a href="#" target="_blank">
-                            <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
-                        </a>
+                        <li>
+                            <a href="https://www.facebook.com/people/Brascesco-Larrosa/100084765421718" target="_blank">
+                                <img src="./img/facebook.png" alt="logo de facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
+                                <img src="./img/instagram.png" alt="logo de instragram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="./img/twitter.png" alt="logo de twitter">
+                            </a>
+                        </li>   
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="./img/whatsapp.png" alt="logo de whatsapp">
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="locations">
