pagina de error

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -180,12 +180,12 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">
+                            <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(" target="_blank">
                                 <img src="./img/twitter.png" alt="logo de twitter">
                             </a>
                         </li>   
                         <li>
-                            <a href="#" target="_blank">
+                            <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(" target="_blank">
                                 <img src="./img/whatsapp.png" alt="logo de whatsapp">
                             </a>
                         </li>
