--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
+    <meta name="description" content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -85,7 +83,7 @@
                 <h2>Novedades:</h2>
                 <div class="cards row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
-                        <a href="#">
+                        <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(">
                             <div class="card h-100" data-aos="fade-up">
                                 <img src="./img/novedad-1.webp" class="card-img-top"
                                     alt="Foto de una oficina vacía con papeles tirados">
@@ -102,7 +100,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="#">
+                        <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(">
                             <div class="card h-100" data-aos="fade-up">
                                 <img src="./img/novedad-2.webp" class="card-img-top"
                                     alt="Foto de abogados reunidos en una sala de conferencias">
@@ -120,7 +118,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="#">
+                        <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(">
                             <div class="card h-100" data-aos="fade-up">
                                 <img src="./img/novedad-3.webp" class="card-img-top"
                                     alt="Foto del palacio legislativo desde fuera">
@@ -185,12 +183,12 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">
+                            <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(" target="_blank">
                                 <img src="./img/twitter.png" alt="logo de twitter">
                             </a>
                         </li>   
                         <li>
-                            <a href="#" target="_blank">
+                            <a href="https://larrosaybrascesco.000webhostapp.com/pipiri...bad:(" target="_blank">
                                 <img src="./img/whatsapp.png" alt="logo de whatsapp">
                             </a>
                         </li>
