--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <h2 class="newsletter__title">¡Suscríbete a nuestro Newsletter!</h2>
             <form action="envio.php">
                 <input type="email" name="email" placeholder="E-MAIL">
+                <button type="submit">Registrarse</button>
         </div>
         <!-- fin de suscripcion a newsletter -->
         <!-- inicia footer -->
