--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="¿Quieres unirte a nuestro espectacular y prestigioso estudio? Claro que sí, ¡comunicate con nosotros!">
+    <meta name="description" content="¿Quieres unirte a nuestro espectacular y prestigioso estudio? Claro que sí, ¡comunícate con nosotros!">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -54,10 +54,8 @@
         </nav>
         <!-- fin navegación -->
         <!-- header -->
-        <header class="header header--margin header--ajust" id="header">
+        <header class="header header-work-with-us header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">¡Trabaja con nosotros!</h1>
-            <img class="header__photo header__foto--left" src="./img/header-trabaja-con-nosotros.webp"
-                alt="foto de una persona sonriendo siendo contratada">
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
