--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -54,10 +54,10 @@
         </nav>
         <!-- fin navegación -->
         <!-- header -->
-        <header class="header header--margin header--ajust" id="header">
+        <header class="header header-quienes-somos header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">Quiénes somos</h1>
-            <img class="header__photo" src="./img/header-quienes-somos.webp"
-                alt="Foto de nuestra abogada estrella en un juicio">
+            <!-- <img class="header__photo" src="./img/header-quienes-somos.webp"
+                alt="Foto de nuestra abogada estrella en un juicio"> -->
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
